--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme. <a href="https://github.com/roots/sage">Contribute on GitHub</a>
-Version:            9.0.0-alpha.4
-Author:             Roots
-Author URI:         https://roots.io/
+Theme Name:         Diaz Gill
+Theme URI:          https://diazgill.com.py
+Description:        Diaz Gill is comprised of a few separate technologies. The back-end is powered by Sage, modular Wordpress starter kit. The front-end is powered by a GraphQL-powered Node application consuming the Wordpress JSON API via the Apollo Stack. Once data is consumed templates are rendered by React on the server-side and rehydrated on the client.
+Version:            1.0.0
+Author:             Present Day
+Author URI:         http://j0ey.co
 Text Domain:        sage
 
 License:            MIT License
